# AE-Scientist

./: .env.example  .flake8  .gitignore  CLAUDE.md  Makefile  bfts_config.yaml  bfts_config_claude-haiku.yaml  bfts_config_gpt-5.yaml  check_inline_imports.py  codex_migration.md  docker-compose.yml  idea_example.json  install_run_pod.sh  launch_scientist_bfts.py  launch_stage1_only.py  launch_stage2_from_run.py  launch_stage3_from_run.py  launch_stage4_from_run.py  pyproject.toml  readme.md
.agent/SOP/: frontend_api_hooks.md  frontend_features.md  server_api_routes.md  server_database_migrations.md
.agent/System/: frontend_architecture.md  server_architecture.md
.claude/commands/: adr-document-pattern.md  adr-feature.md  adr-from-commits.md  adr-init.md  adr-save-skill.md
.cursor/: mcp.json
.github/workflows/: build.yml  lint-paper-review-microsite.yml  lint.yml
.specstory/: .project.json
.specstory/history/: 2025-11-25_14-56Z-evaluate-langgraph-pr-for-potential-benefits.md  2025-12-03_19-24Z-analyze-cost-reduction-in-ai-scientist-v2.md  2025-12-19_15-00Z-how-it-works-page-text-storage.md  2025-12-19_15-25Z-zsh-issue.md  2025-12-19_15-29Z-zsh-issue.md  2025-12-19_16-13Z-zsh-issue.md  2025-12-19_16-13Z-zsh-shell-problem.md  2025-12-19_16-29Z-server-error-(12-15)-explanation.md  2025-12-19_17-23Z-local-development-testing-requirements.md  2025-12-19_18-09Z-ai-scientist-to-ae-scientist-name-change.md  2025-12-19_18-16Z-git-push-commands.md  2025-12-19_18-23Z-tree-visualization-stage-summaries-and-metadata.md  2025-12-19_19-23Z-research-run-title-naming.md  2025-12-19_19-36Z-research-idea-progress-discrepancy.md  2025-12-19_20-39Z-tree-visualization-node-count-discrepancy.md  2025-12-22_15-02Z-logs-card-data-and-logging-options.md  2025-12-22_16-14Z-tree-visualization-card-sections.md  2025-12-22_17-58Z-legend-best-node-border-color.md  2025-12-22_20-18Z-research-page-stage-display-format.md  2025-12-22_20-34Z-pr-115-conflict-resolution.md  2025-12-23_14-05Z-node-tree-visualization-feature-history.md  2025-12-23_14-30Z-ideation-queue-research-run-navigation.md  2025-12-23_15-08Z-stage-2-node-strategy-description-accuracy.md  2025-12-23_15-13Z-tree-viz-stage-2-legend-debug-nodes.md  2025-12-23_15-24Z-tree-visualization-stage-plan-summary.md  2025-12-23_16-30Z-missing-stage-4-edges-in-tree-visualization.md  2025-12-23_16-32Z-fake-runpod-testing-configurability.md  (+8 more)
ai_scientist/: latest_run_finder.py  llm.py  perform_icbinb_writeup.py  perform_ideation_temp_free.py  perform_llm_review.py  perform_plotting.py  perform_vlm_review.py  perform_writeup.py  review_context.py  vlm.py
aigraph/: README.md  agent_step_1.py  prompts.py  utils.py
backend/: README.md  env.example  pyproject.toml
backend/app/: config.py  main.py  routes.py
backend/app/api/: auth.py  chat.py  chat_stream.py  conversations.py  files.py  llm_defaults.py  llm_prompts.py  project_drafts.py  projects.py  search.py
backend/app/middleware/: auth.py
backend/app/models/: chat.py  project_drafts.py  projects.py
backend/app/services/: anthropic_service.py  base_llm_service.py  google_oauth_service.py  grok_service.py  linear_service.py  mem0_service.py  openai_service.py  prompts.py  summarizer_service.py
backend/app/services/database/: base.py  llm_defaults.py
backend/app/services/openai/: chat_with_project_draft.py
backend/app/services/scraper/: branchprompt_parser.py  chat_gpt_parser.py  claude_parser.py  grok_parser.py
backend/database_migrations/: env.py
backend/tests/: test_anthropic_chat_with_project_draft.py  test_base_llm_summarize_document.py  test_chat_stream_errors.py  test_conversations_import.py  test_llm_models.py  test_openai_chat_with_project_draft.py  test_parsers_smoke.py  test_search.py
experiments/: .gitignore  Makefile  README.md  pyproject.toml
experiments/benchmark/: README.md  __init__.py  cli.py  metrics.py  models.py  run_configs.py  runner.py  sample_test_set.py
experiments/notebooks/: benchmark_analysis.ipynb
experiments/paper_sourcing/: README.md  __init__.py  cli.py  models.py  openreview_client.py  sampler.py
frontend/: README.md  env.local.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
ideas/: idea_adam_vs_sgd.md  idea_bow_vs_tfidf.md  idea_data_augmentation.md  idea_dropout_overfitting.md  idea_lr_warmup.md  idea_trojan_llm.md
orchestrator/: create_runpod.ts
paper-review-microsite/: .gitignore  Makefile  README.md
paper-review-microsite/backend/: .env.example  Dockerfile  Makefile  alembic.ini  export_openapi.py  migrate.py  pyproject.toml  railway.toml
paper-review-microsite/backend/app/: __init__.py  config.py  main.py  routes.py
paper-review-microsite/backend/app/api/: __init__.py  auth.py  models.py  paper_reviews.py
paper-review-microsite/backend/app/middleware/: auth.py
paper-review-microsite/backend/app/models/: auth.py  paper_review.py
paper-review-microsite/backend/app/services/: __init__.py  auth_service.py  clerk_service.py  paper_review_service.py  s3_service.py
paper-review-microsite/backend/app/services/database/: __init__.py  paper_reviews.py  users.py
paper-review-microsite/backend/database_migrations/: env.py
paper-review-microsite/backend/database_migrations/versions/: 0001_initial_schema.py
research_pipeline/: .env.example  ARCHITECTURE.md  Makefile  README.md  bfts_config.yaml  bfts_config_claude-haiku.yaml  bfts_config_gpt-5.2.yaml  bfts_config_gpt-5.yaml  bfts_config_gpt.yaml  bfts_config_no_gpu.yaml  download_parent_run.py  idea_example.md  launch_scientist_bfts.py  management_server.py  pyproject.toml  termination_server.py  upload_file.py  upload_folder.py  vulture_whitelist.py
server/: Dockerfile  Makefile  Procfile  README.md  create_runpod.py  env.example  env.example.runpod  export_openapi.py  openapi.json  pyproject.toml  railway.toml  run_idea_judge_demo.py  upload_code_tarball.py  uvicorn_log_config.json
worker/: event_emitter.py  experiment_monitor.py  hf_dataset_reference.py  manage_runs.py  monitor_experiment.py  pod_worker.py
(+786 files in other folders)
