[project]
name = "AE-Scientist-API"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic==1.16.5",
    "anthropic==0.64.0",
    "boto3==1.40.19",
    "fastapi==0.116.1",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "html2text==2024.2.26",
    "httpx==0.27.2",
    "openai==1.101.0",
    "pdfplumber==0.11.7",
    "playwright==1.40.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "requests==2.32.5",
    "types-psycopg2==2.9.21.20",
    "types-requests==2.32.4.20250809",
    "uvicorn[standard]==0.35.0",
]
