[project]
name = "paper-sourcing"
version = "0.1.0"
description = "Paper sourcing from OpenReview for benchmarking"
requires-python = ">=3.12"
dependencies = [
    "openreview-py>=1.40.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "tenacity>=9.0.0",
    "ae-paper-review",
    "scipy>=1.14.0",
    "scikit-learn>=1.6.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "black==25.9.0",
    "isort==5.13.2",
    "mypy==1.11.2",
    "pyright>=1.1.407",
    "ruff>=0.14.3",
    "types-requests>=2.32.0",
    "vulture>=2.14",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
]

[tool.uv.sources]
ae-paper-review = { path = "../packages/ae-paper-review" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paper_sourcing", "benchmark"]

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | outputs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = [".venv", "venv"]
skip_glob = ["**/.venv/**", "**/venv/**"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[tool.pydantic-plugin]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = [
    ".venv",
]
# Warnings for untyped libraries (scipy, sklearn, openreview have no stubs)
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"

[tool.ruff]
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes (includes unused imports/vars)
    "ARG", # flake8-unused-arguments (unused function/method args)
]
extend-select = ["ANN401"]
ignore = ["E501", "G004"]  # Line too long, allow f-strings in logging statements

[tool.pylint.messages_control]
disable = ["logging-fstring-interpolation", "broad-except"]
